changes in Dockerfile

--- a/Payload_Type/test_agent/.docker/Dockerfile
+++ b/Payload_Type/test_agent/.docker/Dockerfile
@@ -1,13 +1,12 @@
 #instructions to create docker container from the docker image of the agent. 
 # syntax=docker/dockerfile:1.4
-FROM scratch
-COPY --link /foo /bar
+FROM python3
+#COPY --link /foo /bar
 
 RUN dnf install -y \
         python3.11 \
         python3-pip \
-        python3.11-devel \
-
+        python3.11-devel 
 
 COPY requirements.txt .
 RUN rm requirements.txt
