changing base image

--- a/Payload_Type/test_agent/.docker/Dockerfile
+++ b/Payload_Type/test_agent/.docker/Dockerfile
@@ -1,6 +1,6 @@
 #instructions to create docker container from the docker image of the agent. 
 # syntax=docker/dockerfile:1.4
-FROM python3
+FROM python:3
 #COPY --link /foo /bar
 
 
